Added properties to API
